--- a/src/App/App.module.css
+++ b/src/App/App.module.css
@@ -1,31 +1,31 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;800&display=swap");
 
 html {
     width: 100%;
     height: 100%;
-    }
+}
 
 body {
     color: rgb(7, 1, 13);
-    font-family: 'Poppins', 'Helvetica', sans-serif;
+    font-family: "Poppins", "Helvetica", sans-serif;
     font-size: 20px;
     font-weight: 400;
     padding: 0;
     margin: 0;
-    background: url('../assets/boston03.jpg') center / cover no-repeat;
-    }
-
+    background: url("../assets/boston04.jpg") center / cover no-repeat;
+}
 
 .Container {
+    /* position: relative; */
     display: flex;
     flex-direction: row;
     gap: 150px;
     margin-top: 50px;
-    }
+}
 
 .Container > :first-child {
     margin-bottom: 20px;
-    }
+}
 
 /* input {
     width: 175px;
@@ -38,49 +38,15 @@ body {
 h1 {
     font-size: 35px;
     font-weight: 900;
-    }
+}
 h2 {
     font-size: 30px;
     font-weight: 700;
-    }
+}
 
 @media (min-width: 768px) and (max-width: 991px) {
     body {
-        background: url('../assets/boston03.jpg') left / cover;
-    }
-
-.Container {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin-top: 50px;
-    }
-
-.TodoContainer{
-    justify-content: center;
-    }
-
-.WeatherContainer{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    }
-
-input {
-    width: auto;
-    height: auto;
-    }
-
-h1{
-    font-size: 20px;
-}
-
-}
-
-
-@media (max-width: 767px) {
-    body {
-        background:  url('../assets/boston03.jpg') 25% 75% / cover;
+        background: url("../assets/bostonmedia002.jpg") center top / cover;
     }
 
     .Container {
@@ -90,12 +56,39 @@ h1{
         margin-top: 50px;
     }
 
-    input {
-        width: auto;
-        height: auto;
+    .TodoContainer {
+        justify-content: center;
     }
 
-    h1{
-    font-size: 15px;
+    .WeatherContainer {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    h1 {
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 767px) {
+    body {
+        background: url("../assets/bostonmedia001.jpg") cover;
+    }
+
+    .Container {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        margin-top: 50px;
+    }
+
+    /* input {
+        width: auto;
+        height: auto;
+    } */
+
+    h1 {
+        font-size: 15px;
     }
 }
