--- a/src/components/AddTodoForm/AddTodoForm.module.css
+++ b/src/components/AddTodoForm/AddTodoForm.module.css
@@ -7,6 +7,7 @@ button {
     padding: 3px;
     cursor: pointer;
 }
+
 .ButtonAdd{
     background: transparent;
     border: none; 
@@ -30,9 +31,32 @@ input {
     border: 0;
     border-radius: 5px;
     box-shadow: 2px 2px 5px rgba(9, 8, 8, 0.5);
-    background-color: rgba(120, 133, 133, 0.631);
+    background-color: rgba(130, 191, 234, 0.495);
 }
 
+.InputContainer{
+    display: flex;
+    justify-content: column;
+}
 
+.ErrorMsg{
+    font-size: 15px;
+    color: brown;
+}
+@media (min-width: 768px) and (max-width: 991px) {
+
+input{
+    width: 110px;
+    height: 10px;
+    margin-left: 80px;
+}
+}
+@media (max-width: 767px) {
+input{
+    width: 110px;
+    height: 10px;
+    margin-left: 80px;
+}  
+}
 
 
