--- a/src/components/TodoList/TodoList.module.css
+++ b/src/components/TodoList/TodoList.module.css
@@ -14,9 +14,27 @@ li{
     padding: 10px;
     margin-top: 1px;
     border: 0;
-    background-color: rgba(120, 133, 133, 0.618);
+    background-color: rgba(130, 191, 234, 0.495);
     display: flex;
     justify-content: space-between;
     align-items: center;
     border-radius: 10px;
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    li{
+        font-size: 15px;
+        width: 170px;
+        height: 30px;
+        padding: 5px;
+    }
+    }
+
+@media (max-width: 767px) {
+    li{
+        font-size: 15px;
+        width: 170px;
+        height: 30px;
+        padding: 5px;
+    }
 }
