Sort with javascript  ascending alphabetical order, changes in footer

--- a/src/components/TodoListItem/TodoListItem.module.css
+++ b/src/components/TodoListItem/TodoListItem.module.css
@@ -3,5 +3,9 @@
     background: transparent;
     border: none; 
     padding: 0; 
-    cursor: pointer; 
+    cursor: pointer;
+}
+
+.todoDate{
+    font-size: 10px;
 }
