--- a/src/App/App.module.css
+++ b/src/App/App.module.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
 
 html {
     width: 100%;
@@ -8,7 +10,7 @@ html {
 body {
     color: rgb(7, 1, 13);
     font-family: "Poppins", "Helvetica", sans-serif;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 400;
     padding: 0;
     margin: 0;
