--- a/src/App/App.module.css
+++ b/src/App/App.module.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;800&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap");
 
 html {
     width: 100%;
@@ -46,8 +46,38 @@ h2 {
     font-weight: 700;
 }
 
+/* ul {
+    display: flex;
+    flex-direction: column;
+} */
+.NavLinkWrapper {
+    flex-direction: row;
+}
+
+.NavLink {
+    font-size: 15px;
+    font-weight: 600;
+    background-color: rgba(253, 253, 253, 0.036);
+    width: 100px;
+    height: 15px;
+    margin: 5px;
+    padding-left: 60px;
+    border-radius: 10px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+    text-transform: uppercase;
+    cursor: pointer;
+    transition: transform 0.2s;
+    text-decoration: none;
+    flex-grow: 1;
+}
+
+.NavLink a {
+    text-decoration: none;
+}
+
 @media (min-width: 768px) and (max-width: 991px) {
     body {
+        /* background: rgba(68, 144, 159, 0.47); */
         background: url("../assets/bostonmedia002.jpg") center top / cover;
     }
 
@@ -62,10 +92,13 @@ h2 {
         justify-content: center;
     }
 
+    .NavLinkWrapper{
+        flex-direction: column;
+    }
+
     .WeatherContainer {
         display: flex;
         flex-direction: column;
-        justify-content: center;
     }
 
     h1 {
@@ -75,6 +108,7 @@ h2 {
 
 @media (max-width: 767px) {
     body {
+        /* background: rgba(68, 144, 159, 0.47) ; */
         background: url("../assets/bostonmedia001.jpg") cover;
     }
 
@@ -85,10 +119,19 @@ h2 {
         margin-top: 50px;
     }
 
+    .WeatherContainer {
+        display: flex;
+        flex-direction: column;
+    }
+
     /* input {
         width: auto;
         height: auto;
     } */
+
+    .NavLinkWrapper{
+        flex-direction: column;
+    }
 
     h1 {
         font-size: 15px;
