--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,7 +1,7 @@
 .Copyright {
     color: black;
-    width: 310px;
-    height: 65px;
+    max-width: 100%;
+    height: 100%;
     padding: 10px;
     margin-top: 1px; 
     border: 0;
@@ -12,8 +12,8 @@
 
 footer {
     padding: 10px 0;
-    text-align: left;
-    position: fixed;
+    /* text-align: left; */
+    /* position: fixed; */
     bottom: 0;
     width: 100%;
 }
@@ -23,13 +23,12 @@ footer {
 .Copyright {
     font-size: 10px;
     padding-left: 10px;
+    align-items: center;
 }
 
 footer {
     padding: 10px 0;
-    text-align: left;
-    width: 50%;
-    text-align: center;
+    align-items: center;
 }
 }
 
@@ -37,13 +36,11 @@ footer {
 
 .Copyright {
     font-size: 10px;
-    display: flex;
-    justify-content: center;
+    align-items: center;
 }
 
 footer {
     padding: 10px 0;
     text-align: center;
-    width: 50%;
 }
 }
