--- a/src/components/Quote/Quote.module.css
+++ b/src/components/Quote/Quote.module.css
@@ -1,23 +1,34 @@
 .Quote{
     font-size: 30px;
-    color:rgb(1, 1, 13);
+    color:rgb(22, 22, 68);
     padding-left: 100px;  
     padding-top: 10px;
     font-family: 'Indie Flower', cursive;
     width: 350px;
+     animation: glow 1s ease-in-out infinite alternate;
 }
+
+@keyframes glow {
+            0% {
+                text-shadow: 0 0 10px rgb(78, 78, 129), 0 0 20px rgb(78, 78, 129), 0 0 30px rgb(78, 78, 129);
+            }
+            100% {
+                text-shadow: 0 0 20px rgb(78, 78, 129), 0 0 30px rgb(78, 78, 129), 0 0 40px rgb(78, 78, 129);
+            }}
 @media (min-width: 768px) and (max-width: 991px) {
 
 .Quote{
-    font-size: 10px;
+    font-size: 15px;
     padding-left: 100px;
+    align-items: center;
 }
 }
 
 @media (max-width: 767px) {
 
 .Quote{
-    font-size: 10px;
+    font-size: 15px;
     padding-left: 100px;
+    align-items: center;
 }
 }
