--- a/src/components/TodoContainer/TodoContainer.module.css
+++ b/src/components/TodoContainer/TodoContainer.module.css
@@ -13,18 +13,37 @@ padding-left: 50px;
     margin-left: 50px;
     width: 80px;
     font-weight: 600;
+    color: rgba(9, 9, 23, 0.841);
     cursor: pointer;
 }
 
 .SortButtons{
     display: flex;
     justify-content: left;
+    cursor: pointer;
 }
+
 @media (min-width: 768px) and (max-width: 991px) {
     h1{
         font-size: 50%;
         text-align: center;
     }
+
+    .SortButtons{
+    flex-direction: column;
+    align-items: center;
+    cursor: pointer;
+}
+
+    .Sort{
+        font-size: 10px;
+        color: black;
+        /* margin-left: 50px; */
+        /* width: 80px; */
+        font-weight: 400;
+        cursor: pointer;
+}
+
 }
 
 @media (max-width: 767px) {
@@ -32,5 +51,19 @@ padding-left: 50px;
         font-size: 50%;
         text-align: center;
     }
+
+    .SortButtons{
+    flex-direction: column;
+    align-items: center;
+}
+
+.Sort{
+    font-size: 10px;
+    color: black;
+    /* margin-left: 50px; */
+    /* width: 80px; */
+    font-weight: 400;
+    cursor: pointer;
+}
 }
 
