--- a/src/App/App.module.css
+++ b/src/App/App.module.css
@@ -41,15 +41,12 @@ h1 {
     font-size: 35px;
     font-weight: 900;
 }
+
 h2 {
     font-size: 30px;
     font-weight: 700;
 }
 
-/* ul {
-    display: flex;
-    flex-direction: column;
-} */
 .NavLinkWrapper {
     flex-direction: row;
 }
@@ -57,7 +54,7 @@ h2 {
 .NavLink {
     font-size: 15px;
     font-weight: 600;
-    background-color: rgba(253, 253, 253, 0.036);
+    background-color: rgba(8, 8, 8, 0.119);
     width: 100px;
     height: 15px;
     margin: 5px;
@@ -66,13 +63,21 @@ h2 {
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
     text-transform: uppercase;
     cursor: pointer;
-    transition: transform 0.2s;
+    /* transition: transform 0.2s; */
+    transition: transform 0.2s, box-shadow 0.2s, background-color 0.2s;
     text-decoration: none;
     flex-grow: 1;
 }
 
+.NavLink:hover {
+    transform: scale(1);
+    background: linear-gradient(45deg, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.5)); 
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3), 0px 0px 10px rgba(255, 255, 255, 0.8);
+}
+
 .NavLink a {
     text-decoration: none;
+    color: black;
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
@@ -92,7 +97,7 @@ h2 {
         justify-content: center;
     }
 
-    .NavLinkWrapper{
+    .NavLinkWrapper {
         flex-direction: column;
     }
 
@@ -129,7 +134,7 @@ h2 {
         height: auto;
     } */
 
-    .NavLinkWrapper{
+    .NavLinkWrapper {
         flex-direction: column;
     }
 
